--- a/confirmation.html
+++ b/confirmation.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Email Sent</title>
+    <link rel="stylesheet" href="style1/style2.css">
 </head>
-
 <body>
-    <h1>message sent</h1>
-    <button><a href="/">back</a></button>
-
+    <h1>Email sent successfully!</h1>
+    <p>Thank you for your message.</p>
+    <a href="/">Go back</a>
 </body>
-
 </html>
