--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="style1/images/logo.png" class="logo">
+                <img src="style1/images/logo3.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
